sandbox/Raylib_natchuz/src/src/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    int frameCount;         
    BoneInfo *bones;        
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayCollision {
    bool hit;               
    float distance;         
    Vector3 point;          
    Vector3 normal;         
} RayCollision;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Wave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct rAudioProcessor rAudioProcessor;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    rAudioProcessor *processor; 
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct Sound {
    AudioStream stream;         
    unsigned int frameCount;    
} Sound;
typedef struct Music {
    AudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} Music;
RLAPI Mesh GenMeshPoly(int sides, float radius);                                            
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                     
RLAPI Mesh GenMeshCube(float width, float height, float length);                            
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                              
RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);                          
RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);                         
RLAPI Mesh GenMeshCone(float radius, float height, int slices);                             
RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                   
RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                    
RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                 
RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                               
RLAPI Material *LoadMaterials(const char *fileName, int *materialCount);                    
RLAPI Material LoadMaterialDefault(void);                                                   
RLAPI bool IsMaterialReady(Material material);                                              
RLAPI void UnloadMaterial(Material material);                                               
RLAPI void SetMaterialTexture(Material *material, int mapType, Texture2D texture);          
RLAPI void SetModelMeshMaterial(Model *model, int meshId, int materialId);                  
RLAPI ModelAnimation *LoadModelAnimations(const char *fileName, unsigned int *animCount);   
RLAPI void UpdateModelAnimation(Model model, ModelAnimation anim, int frame);               
RLAPI void UnloadModelAnimation(ModelAnimation anim);                                       
RLAPI void UnloadModelAnimations(ModelAnimation *animations, unsigned int count);           
RLAPI bool IsModelAnimationValid(Model model, ModelAnimation anim);                         
RLAPI bool CheckCollisionSpheres(Vector3 center1, float radius1, Vector3 center2, float radius2);   
RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                 
RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 center, float radius);                  
RLAPI RayCollision GetRayCollisionSphere(Ray ray, Vector3 center, float radius);                    
RLAPI RayCollision GetRayCollisionBox(Ray ray, BoundingBox box);                                    
RLAPI RayCollision GetRayCollisionMesh(Ray ray, Mesh mesh, Matrix transform);                       
RLAPI RayCollision GetRayCollisionTriangle(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3);            
RLAPI RayCollision GetRayCollisionQuad(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3, Vector3 p4);    
typedef void (*AudioCallback)(void *bufferData, unsigned int frames);
RLAPI void InitAudioDevice(void);                                     
RLAPI void CloseAudioDevice(void);                                    
RLAPI bool IsAudioDeviceReady(void);                                  
RLAPI void SetMasterVolume(float volume);                             
RLAPI Wave LoadWave(const char *fileName);                            
RLAPI Wave LoadWaveFromMemory(const char *fileType, const unsigned char *fileData, int dataSize); 
RLAPI bool IsWaveReady(Wave wave);                                    
RLAPI Sound LoadSound(const char *fileName);                          
RLAPI Sound LoadSoundFromWave(Wave wave);                             
RLAPI bool IsSoundReady(Sound sound);                                 
RLAPI void UpdateSound(Sound sound, const void *data, int sampleCount); 
RLAPI void UnloadWave(Wave wave);                                     
RLAPI void UnloadSound(Sound sound);                                  
RLAPI bool ExportWave(Wave wave, const char *fileName);               
RLAPI bool ExportWaveAsCode(Wave wave, const char *fileName);         
RLAPI void PlaySound(Sound sound);                                    
RLAPI void StopSound(Sound sound);                                    
RLAPI void PauseSound(Sound sound);                                   
RLAPI void ResumeSound(Sound sound);                                  
RLAPI bool IsSoundPlaying(Sound sound);                               
RLAPI void SetSoundVolume(Sound sound, float volume);                 
RLAPI void SetSoundPitch(Sound sound, float pitch);                   
RLAPI void SetSoundPan(Sound sound, float pan);                       
RLAPI Wave WaveCopy(Wave wave);                                       
RLAPI void WaveCrop(Wave *wave, int initSample, int finalSample);     
RLAPI void WaveFormat(Wave *wave, int sampleRate, int sampleSize, int channels); 
RLAPI float *LoadWaveSamples(Wave wave);                              
RLAPI void UnloadWaveSamples(float *samples);                         
RLAPI Music LoadMusicStream(const char *fileName);                    
RLAPI Music LoadMusicStreamFromMemory(const char *fileType, const unsigned char *data, int dataSize); 
RLAPI bool IsMusicReady(Music music);                                 
RLAPI void UnloadMusicStream(Music music);                            
RLAPI void PlayMusicStream(Music music);                              
RLAPI bool IsMusicStreamPlaying(Music music);                         
RLAPI void UpdateMusicStream(Music music);                            
RLAPI void StopMusicStream(Music music);                              
RLAPI void PauseMusicStream(Music music);                             
RLAPI void ResumeMusicStream(Music music);                            
RLAPI void SeekMusicStream(Music music, float position);              
RLAPI void SetMusicVolume(Music music, float volume);                 
RLAPI void SetMusicPitch(Music music, float pitch);                   
RLAPI void SetMusicPan(Music music, float pan);                       
RLAPI float GetMusicTimeLength(Music music);                          
RLAPI float GetMusicTimePlayed(Music music);                          
RLAPI AudioStream LoadAudioStream(unsigned int sampleRate, unsigned int sampleSize, unsigned int channels); 
RLAPI bool IsAudioStreamReady(AudioStream stream);                    
RLAPI void UnloadAudioStream(AudioStream stream);                     
RLAPI void UpdateAudioStream(AudioStream stream, const void *data, int frameCount); 
RLAPI bool IsAudioStreamProcessed(AudioStream stream);                
RLAPI void PlayAudioStream(AudioStream stream);                       
RLAPI void PauseAudioStream(AudioStream stream);                      
RLAPI void ResumeAudioStream(AudioStream stream);                     
RLAPI bool IsAudioStreamPlaying(AudioStream stream);                  
RLAPI void StopAudioStream(AudioStream stream);                       
RLAPI void SetAudioStreamVolume(AudioStream stream, float volume);    
RLAPI void SetAudioStreamPitch(AudioStream stream, float pitch);      
RLAPI void SetAudioStreamPan(AudioStream stream, float pan);          
RLAPI void SetAudioStreamBufferSizeDefault(int size);                 
RLAPI void SetAudioStreamCallback(AudioStream stream, AudioCallback callback);  
RLAPI void AttachAudioStreamProcessor(AudioStream stream, AudioCallback processor); 
RLAPI void DetachAudioStreamProcessor(AudioStream stream, AudioCallback processor); 
RLAPI void AttachAudioMixedProcessor(AudioCallback processor); 
RLAPI void DetachAudioMixedProcessor(AudioCallback processor); 