Raylib/raylib.jai


// Mesh generation functions
GenMeshPoly :: (sides: s32, radius: float) -> Mesh #foreign raylib;
GenMeshPlane :: (width: float, length: float, resX: s32, resZ: s32) -> Mesh #foreign raylib;
GenMeshCube :: (width: float, height: float, length: float) -> Mesh #foreign raylib;
GenMeshSphere :: (radius: float, rings: s32, slices: s32) -> Mesh #foreign raylib;
GenMeshHemiSphere :: (radius: float, rings: s32, slices: s32) -> Mesh #foreign raylib;
GenMeshCylinder :: (radius: float, height: float, slices: s32) -> Mesh #foreign raylib;
GenMeshCone :: (radius: float, height: float, slices: s32) -> Mesh #foreign raylib;
GenMeshTorus :: (radius: float, size: float, radSeg: s32, sides: s32) -> Mesh #foreign raylib;
GenMeshKnot :: (radius: float, size: float, radSeg: s32, sides: s32) -> Mesh #foreign raylib;
GenMeshHeightmap :: (heightmap: Image, size: Vector3) -> Mesh #foreign raylib;
GenMeshCubicmap :: (cubicmap: Image, cubeSize: Vector3) -> Mesh #foreign raylib;

// Material loading/unloading functions
LoadMaterials :: (fileName: *u8, materialCount: *s32) -> *Material #foreign raylib;
LoadMaterialDefault :: () -> Material #foreign raylib;
IsMaterialReady :: (material: Material) -> bool #foreign raylib;
UnloadMaterial :: (material: Material) -> void #foreign raylib;
SetMaterialTexture :: (material: *Material, mapType: s32, texture: Texture2D) -> void #foreign raylib;
SetModelMeshMaterial :: (model: *Model, meshId: s32, materialId: s32) -> void #foreign raylib;

// Model animations loading/unloading functions
LoadModelAnimations :: (fileName: *u8, animCount: *u32) -> *ModelAnimation #foreign raylib;
UpdateModelAnimation :: (model: Model, anim: ModelAnimation, frame: s32) -> void #foreign raylib;
UnloadModelAnimation :: (anim: ModelAnimation) -> void #foreign raylib;
UnloadModelAnimations :: (animations: *ModelAnimation, count: u32) -> void #foreign raylib;
IsModelAnimationValid :: (model: Model, anim: ModelAnimation) -> bool #foreign raylib;

// Collision detection functions
CheckCollisionSpheres :: (center1: Vector3, radius1: float, center2: Vector3, radius2: float) -> bool #foreign raylib;
CheckCollisionBoxes :: (box1: BoundingBox, box2: BoundingBox) -> bool #foreign raylib;
CheckCollisionBoxSphere :: (box: BoundingBox, center: Vector3, radius: float) -> bool #foreign raylib;
GetRayCollisionSphere :: (ray: Ray, center: Vector3, radius: float) -> RayCollision #foreign raylib;
GetRayCollisionBox :: (ray: Ray, box: BoundingBox) -> RayCollision #foreign raylib;
GetRayCollisionMesh :: (ray: Ray, mesh: Mesh, transform: Matrix) -> RayCollision #foreign raylib;
GetRayCollisionTriangle :: (ray: Ray, p1: Vector3, p2: Vector3, p3: Vector3) -> RayCollision #foreign raylib;
GetRayCollisionQuad :: (ray: Ray, p1: Vector3, p2: Vector3, p3: Vector3, p4: Vector3) -> RayCollision #foreign raylib;

//------------------------------------------------------------------------------------
// Audio Loading and Playing Functions (Module: audio)
//------------------------------------------------------------------------------------
AudioCallback :: #type (bufferData: *void, frames: u32) -> void #c_call;

// Audio device management functions
InitAudioDevice :: () -> void #foreign raylib;
CloseAudioDevice :: () -> void #foreign raylib;
IsAudioDeviceReady :: () -> bool #foreign raylib;
SetMasterVolume :: (volume: float) -> void #foreign raylib;

// Wave/Sound loading/unloading functions
LoadWave :: (fileName: *u8) -> Wave #foreign raylib;
LoadWaveFromMemory :: (fileType: *u8, fileData: *u8, dataSize: s32) -> Wave #foreign raylib;
IsWaveReady :: (wave: Wave) -> bool #foreign raylib;
LoadSound :: (fileName: *u8) -> Sound #foreign raylib;
LoadSoundFromWave :: (wave: Wave) -> Sound #foreign raylib;
IsSoundReady :: (sound: Sound) -> bool #foreign raylib;
UpdateSound :: (sound: Sound, data: *void, sampleCount: s32) -> void #foreign raylib;
UnloadWave :: (wave: Wave) -> void #foreign raylib;
UnloadSound :: (sound: Sound) -> void #foreign raylib;
ExportWave :: (wave: Wave, fileName: *u8) -> bool #foreign raylib;
ExportWaveAsCode :: (wave: Wave, fileName: *u8) -> bool #foreign raylib;

// Wave/Sound management functions
PlaySound :: (sound: Sound) -> void #foreign raylib;
StopSound :: (sound: Sound) -> void #foreign raylib;
PauseSound :: (sound: Sound) -> void #foreign raylib;
ResumeSound :: (sound: Sound) -> void #foreign raylib;
IsSoundPlaying :: (sound: Sound) -> bool #foreign raylib;
SetSoundVolume :: (sound: Sound, volume: float) -> void #foreign raylib;
SetSoundPitch :: (sound: Sound, pitch: float) -> void #foreign raylib;
SetSoundPan :: (sound: Sound, pan: float) -> void #foreign raylib;
WaveCopy :: (wave: Wave) -> Wave #foreign raylib;
WaveCrop :: (wave: *Wave, initSample: s32, finalSample: s32) -> void #foreign raylib;
WaveFormat :: (wave: *Wave, sampleRate: s32, sampleSize: s32, channels: s32) -> void #foreign raylib;
LoadWaveSamples :: (wave: Wave) -> *float #foreign raylib;
UnloadWaveSamples :: (samples: *float) -> void #foreign raylib;

// Music management functions
LoadMusicStream :: (fileName: *u8) -> Music #foreign raylib;
LoadMusicStreamFromMemory :: (fileType: *u8, data: *u8, dataSize: s32) -> Music #foreign raylib;
IsMusicReady :: (music: Music) -> bool #foreign raylib;
UnloadMusicStream :: (music: Music) -> void #foreign raylib;
PlayMusicStream :: (music: Music) -> void #foreign raylib;
IsMusicStreamPlaying :: (music: Music) -> bool #foreign raylib;
UpdateMusicStream :: (music: Music) -> void #foreign raylib;
StopMusicStream :: (music: Music) -> void #foreign raylib;
PauseMusicStream :: (music: Music) -> void #foreign raylib;
ResumeMusicStream :: (music: Music) -> void #foreign raylib;
SeekMusicStream :: (music: Music, position: float) -> void #foreign raylib;
SetMusicVolume :: (music: Music, volume: float) -> void #foreign raylib;
SetMusicPitch :: (music: Music, pitch: float) -> void #foreign raylib;
SetMusicPan :: (music: Music, pan: float) -> void #foreign raylib;
GetMusicTimeLength :: (music: Music) -> float #foreign raylib;
GetMusicTimePlayed :: (music: Music) -> float #foreign raylib;

// AudioStream management functions
LoadAudioStream :: (sampleRate: u32, sampleSize: u32, channels: u32) -> AudioStream #foreign raylib;
IsAudioStreamReady :: (stream: AudioStream) -> bool #foreign raylib;
UnloadAudioStream :: (stream: AudioStream) -> void #foreign raylib;
UpdateAudioStream :: (stream: AudioStream, data: *void, frameCount: s32) -> void #foreign raylib;
IsAudioStreamProcessed :: (stream: AudioStream) -> bool #foreign raylib;
PlayAudioStream :: (stream: AudioStream) -> void #foreign raylib;
PauseAudioStream :: (stream: AudioStream) -> void #foreign raylib;
ResumeAudioStream :: (stream: AudioStream) -> void #foreign raylib;
IsAudioStreamPlaying :: (stream: AudioStream) -> bool #foreign raylib;
StopAudioStream :: (stream: AudioStream) -> void #foreign raylib;
SetAudioStreamVolume :: (stream: AudioStream, volume: float) -> void #foreign raylib;
SetAudioStreamPitch :: (stream: AudioStream, pitch: float) -> void #foreign raylib;
SetAudioStreamPan :: (stream: AudioStream, pan: float) -> void #foreign raylib;
SetAudioStreamBufferSizeDefault :: (size: s32) -> void #foreign raylib;
SetAudioStreamCallback :: (stream: AudioStream, callback: AudioCallback) -> void #foreign raylib;

AttachAudioStreamProcessor :: (stream: AudioStream, processor: AudioCallback) -> void #foreign raylib;
DetachAudioStreamProcessor :: (stream: AudioStream, processor: AudioCallback) -> void #foreign raylib;

AttachAudioMixedProcessor :: (processor: AudioCallback) -> void #foreign raylib;
DetachAudioMixedProcessor :: (processor: AudioCallback) -> void #foreign raylib;

// Dynamic vertex buffers (position + texcoords + colors + indices arrays)
VertexBuffer :: struct {
	elementCount: s32; // Number of elements in the buffer (QUADS)

	vertices:     *float; // Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
	texcoords:    *float; // Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
	colors:       *u8; // Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)

	indices:      *u32; // Vertex indices (in case vertex data comes indexed) (6 indices per quad)

	vaoId:        u32; // OpenGL Vertex Array Object id
	vboId:        [4] u32; // OpenGL Vertex Buffer Objects id (4 types of vertex data)
}

// Draw call type
// NOTE: Only texture changes register a new draw, other state-change-related elements are not
// used at this moment (vaoId, shaderId, matrices), raylib just forces a batch draw call if any
// of those state-change happens (this is done in core module)
DrawCall :: struct {
	mode:            s32; // Drawing mode: LINES, TRIANGLES, QUADS
	vertexCount:     s32; // Number of vertex of the draw
	vertexAlignment: s32; // Number of vertex required for index alignment (LINES, TRIANGLES)

	textureId:       u32; // Texture id to be used on the draw -> Use to create new draw call if changes
}

// rlRenderBatch type
RenderBatch :: struct {
	bufferCount:   s32; // Number of vertex buffers (multi-buffering support)
	currentBuffer: s32; // Current buffer tracking in case of multi-buffering
	vertexBuffer:  *VertexBuffer; // Dynamic buffer(s) for vertex data

	draws:         *DrawCall; // Draw calls array, depends on textureId
	drawCounter:   s32; // Draw calls counter
	currentDepth:  float; // Current depth value for next draw
}

// OpenGL version
GlVersion :: enum u32 {
	_11   :: 1;
	_21   :: 2;
	_33   :: 3;
	_43   :: 4;
	ES_20 :: 5;
}
RL_OPENGL_11    :: GlVersion._11;
RL_OPENGL_21    :: GlVersion._21;
RL_OPENGL_33    :: GlVersion._33;
RL_OPENGL_43    :: GlVersion._43;
RL_OPENGL_ES_20 :: GlVersion.ES_20;

// Framebuffer attachment type
// NOTE: By default up to 8 color channels defined, but it can be more
FramebufferAttachType :: enum u32 {
	COLOR_CHANNEL0 :: 0;
	COLOR_CHANNEL1 :: 1;
	COLOR_CHANNEL2 :: 2;
	COLOR_CHANNEL3 :: 3;
	COLOR_CHANNEL4 :: 4;
	COLOR_CHANNEL5 :: 5;
	COLOR_CHANNEL6 :: 6;
	COLOR_CHANNEL7 :: 7;
	DEPTH          :: 100;
	STENCIL        :: 200;
}
RL_ATTACHMENT_COLOR_CHANNEL0 :: FramebufferAttachType.COLOR_CHANNEL0;
RL_ATTACHMENT_COLOR_CHANNEL1 :: FramebufferAttachType.COLOR_CHANNEL1;
RL_ATTACHMENT_COLOR_CHANNEL2 :: FramebufferAttachType.COLOR_CHANNEL2;
RL_ATTACHMENT_COLOR_CHANNEL3 :: FramebufferAttachType.COLOR_CHANNEL3;
RL_ATTACHMENT_COLOR_CHANNEL4 :: FramebufferAttachType.COLOR_CHANNEL4;
RL_ATTACHMENT_COLOR_CHANNEL5 :: FramebufferAttachType.COLOR_CHANNEL5;
RL_ATTACHMENT_COLOR_CHANNEL6 :: FramebufferAttachType.COLOR_CHANNEL6;
RL_ATTACHMENT_COLOR_CHANNEL7 :: FramebufferAttachType.COLOR_CHANNEL7;
RL_ATTACHMENT_DEPTH          :: FramebufferAttachType.DEPTH;
RL_ATTACHMENT_STENCIL        :: FramebufferAttachType.STENCIL;

// Framebuffer texture attachment type
FramebufferAttachTextureType :: enum u32 {
	CUBEMAP_POSITIVE_X :: 0;
	CUBEMAP_NEGATIVE_X :: 1;
	CUBEMAP_POSITIVE_Y :: 2;
	CUBEMAP_NEGATIVE_Y :: 3;
	CUBEMAP_POSITIVE_Z :: 4;
	CUBEMAP_NEGATIVE_Z :: 5;
	TEXTURE2D          :: 100;
	RENDERBUFFER       :: 200;
}
RL_ATTACHMENT_CUBEMAP_POSITIVE_X :: FramebufferAttachTextureType.CUBEMAP_POSITIVE_X;
RL_ATTACHMENT_CUBEMAP_NEGATIVE_X :: FramebufferAttachTextureType.CUBEMAP_NEGATIVE_X;
RL_ATTACHMENT_CUBEMAP_POSITIVE_Y :: FramebufferAttachTextureType.CUBEMAP_POSITIVE_Y;
RL_ATTACHMENT_CUBEMAP_NEGATIVE_Y :: FramebufferAttachTextureType.CUBEMAP_NEGATIVE_Y;
RL_ATTACHMENT_CUBEMAP_POSITIVE_Z :: FramebufferAttachTextureType.CUBEMAP_POSITIVE_Z;
RL_ATTACHMENT_CUBEMAP_NEGATIVE_Z :: FramebufferAttachTextureType.CUBEMAP_NEGATIVE_Z;
RL_ATTACHMENT_TEXTURE2D          :: FramebufferAttachTextureType.TEXTURE2D;
RL_ATTACHMENT_RENDERBUFFER       :: FramebufferAttachTextureType.RENDERBUFFER;

// Face culling mode
CullMode :: enum u32 {
	FRONT :: 0;
	BACK  :: 1;
}
RL_CULL_FACE_FRONT :: CullMode.FRONT;
RL_CULL_FACE_BACK  :: CullMode.BACK;
